# john-brown-metaphor-analysis

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  MIGRATE-TO-JOHN-BROWN-METAPHOR-ANALYSIS.md  README.md  REPO-METHODOLOGY-PATCH.md  SECURITY.md  _quarto.yml  evidence.qmd  index.qmd  publication-audit.qmd  pyproject.toml  reproducibility-report.qmd  styles.css  workflow.qmd  working-paper.qmd
case-study/: README.md  human-decisions.md  intervention-log.csv  process-events.csv  thesis-history.md
config/: project.yml
goals/: 00-research-foundation.md  10-corpus-acquisition.md  20-evidence-coding.md  20-textual-verification-and-segmentation.md  30-analysis-and-thesis.md  30-metaphor-and-symbolic-language-coding.md  40-diachronic-analysis-and-thesis.md  40-draft-paper.md  50-adversarial-review.md  50-draft-paper.md  60-adversarial-review.md  60-final-publication.md  70-final-publication.md  99-master-goal.md
logs/: progress.md
methodology/: artifact-model.md  baseline-methodology.md  case-2-evaluation-plan.md  case-2-findings.md  case-study-findings.md  evaluation-plan.md  governance-model.md  human-ai-boundary.md  limitations.md  methodology-publication-readiness.md  methodology-review.md  methodology.md  research-question.md
methodology-paper/: methodology-paper.html  methodology-paper.qmd  references.bib
migration/: inventory.md  migration-report.md
outputs/: evidence-appendix.csv  paper.html  publication-audit.md  publication-readme.md  reproducibility-report.md
paper/: _quarto.yml  paper.qmd  references.bib
reviews/: anachronism-review.qmd  (+10 more)
(+69 files in other folders)
