[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lincoln-war-research"
version = "0.1.0"
description = "Traceable corpus and evidence tooling for a study of Lincoln's understanding of war."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
web = ["beautifulsoup4>=4.12", "requests>=2.32"]
pdf = ["pypdf>=5.0"]

[project.scripts]
lincoln-research = "lincoln_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
